--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -2,7 +2,7 @@
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', '{{ site.google_analytics_key }}']);
+  _gaq.push(['_setAccount', 'UA-126058569-1']);
   _gaq.push(['_trackPageview']);
 
   (function() {
@@ -13,3 +13,19 @@
 
 </script>
 {% endif %}
+
+<!--{% if site.google_analytics_key %}
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', '{{ site.google_analytics_key }}']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+{% endif %}-->
